--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Hi, I'm <span>Sanjeev Kumar Chethula</span></h1>
+            <h1>Hi, I'm <span>Chandra Maanaswi Yashoda</span></h1>
             <p>Welcome to my personal portfolio!</p>
         </div>
     </header>
@@ -18,12 +18,12 @@
     <section id="about-me">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hi! I'm Sanjeev Kumar Chethula, a passionate developer with skills in web development and software engineering.</p>
+            <p>Hi! Chandra Maanaswi Yashoda, a passionate developer with skills in web development and software engineering.</p>
             <h3>Education Details</h3>
             <ul>
-                <li><strong>10th Grade: (8.5)</strong> Sri Chaitanya School</li>
-                <li><strong>Intermediate (64%):</strong> Jvs - Sri Chaitanya Junior College, MPC</li>
-                <li><strong>B.Tech: (7.5)</strong> Nalla Malla Reddy Engineering College</li>
+                <li><strong>10th Grade: (10.0)</strong> Sri Chaitanya School</li>
+                <li><strong>Intermediate (97.5%):</strong> Sri Nalanda Junior College, MPC</li>
+                <li><strong>B.Tech: (9.15)</strong> Nalla Malla Reddy Engineering College</li>
             </ul>
         </div>
     </section>
